[tool.poetry]
name = "exchange_price_exporter"
version = "0.2.0"
description = ""
authors = ["etienne-napoleone <etienne.napoleone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
prometheus_client = "^0.8.0"
poche = "^0.3.0"
requests = "^2.24.0"
toml = "^0.10.1"
click = "^7.1.2"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.782"
coverage = "^5.1"

[tool.poetry.scripts]
exchange-price-exporter = 'exchange_price_exporter.cli:entrypoint'

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
